Add countdown foundation

--- a/src/sass/components/Timer.scss
+++ b/src/sass/components/Timer.scss
@@ -1,6 +1,7 @@
 .timer {
     height: 98vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: teal;
