--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -22,6 +22,8 @@ $font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Rob
 $font-family-base:            $font-family-sans-serif !default;
 
 $font-size-base:              18px !default;
+$font-size-xxl:               ($font-size-base * 3.00) !default;
+$font-size-xl:                ($font-size-base * 2.00) !default;
 $font-size-lg:                ($font-size-base * 1.25) !default;
 $font-size-sm:                0.75rem !default;
 $font-size-xs:                0.65rem !default;
