Add icons to the footer

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -13,7 +13,7 @@ $body-color: $white !default;
 
 $link-color:                  $oslo-gray !default;
 $link-decoration:             none !default;
-$link-hover-color:            $oslo-gray !default;
+$link-hover-color:            $white !default;
 $link-hover-decoration:       none !default;
 
 // Fonts
