--- a/src/sass/components/Footer.scss
+++ b/src/sass/components/Footer.scss
@@ -1,10 +1,30 @@
 .footer {
   padding: 1rem;
   height: 3rem;
+  color: $oslo-gray;
   font-size: $font-size-xs;
-  text-align: center;
   display: grid;
   grid-template-columns: 1fr;
   grid-row-gap: 2rem;
+  justify-items: center;
   align-items: end;
+
+  .links {
+    min-width: 50vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+
+    a {
+      color: $link-color;
+      text-decoration: none;
+      font-size: $font-size-xl;
+
+      &:hover {
+        color: $link-hover-color;
+      }
+
+    }
+  }
 }
