Add gradient and custom styling to the timer

--- a/src/sass/components/Countdown.scss
+++ b/src/sass/components/Countdown.scss
@@ -1,6 +1,6 @@
 .countdown {
   width: 100%;
-  background-color: brown;
+  //background-color: brown;
   display: flex;
   flex-direction: row;
   align-items: center;
