--- a/src/sass/components/Timer.scss
+++ b/src/sass/components/Timer.scss
@@ -1,8 +1,41 @@
+$timer-height: 98vh !default;
+
 .timer {
-    height: 98vh;
+  height: $timer-height;
+  background-color: mediumslateblue;
+
+  &:after {
+    content: "";
+    position: absolute;
+    height: $timer-height;
+    width: 100%;
+    overflow: hidden;
+    background: radial-gradient(
+      ellipse 150% 100% at 50% 0%,
+    #00000000 75%,
+      $body-bg 100%
+    );
+  }
+
+  .container {
+    height: $timer-height;
+    width: 100%;
+    position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: teal;
+
+    .logo {
+      display: flex;
+      height: 70%;
+      align-items: center;
+      justify-content: center;
+    }
+  
+    .countdown {
+      z-index: 10;
+    }
+
+  }
+
 }
+
