--- a/src/sass/components/Countdown.scss
+++ b/src/sass/components/Countdown.scss
@@ -1,10 +1,8 @@
 .countdown {
-  width: 100%;
-  //background-color: brown;
-  display: flex;
-  flex-direction: row;
+  padding: 0 0.5rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(0px, 1fr));
   align-items: center;
-  justify-content: space-evenly;
 
   .timeFraction {
     display: flex;
@@ -13,13 +11,39 @@
     justify-content: center;
 
     h1 {
-      font-size: 8rem;
       margin: 0;
       padding: 0;
+      font-size: 8rem;
+      
+      @include breakpoint(md) {
+        font-size: 6.5rem;
+      }
+
+      @include breakpoint(sm) {
+        font-size: 4.0rem;
+      }
+
+      @include breakpoint(xs) {
+        font-size: 2.5rem;
+      }
+
     }
 
     span {
       font-size: $font-size-xl;
+
+      @include breakpoint(md) {
+        font-size: $font-size-lg;
+      }
+
+      @include breakpoint(sm) {
+        font-size: $font-size-base;
+      }
+      
+      @include breakpoint(xs) {
+        font-size: $font-size-sm;
+      }
+
     }
 
   }
