--- a/src/sass/components/Footer.scss
+++ b/src/sass/components/Footer.scss
@@ -6,15 +6,24 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-row-gap: 2rem;
+  text-align: center;
   justify-items: center;
   align-items: end;
 
   .links {
-    min-width: 50vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    width: 50%;
+
+    @include breakpoint(sm) {
+      width: 75%;
+    }
+
+    @include breakpoint(xs) {
+      width: 100%;
+    }
 
     a {
       color: $link-color;
