Add styles to timer tiles

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,6 +3,9 @@
 $white:         #fff !default;
 $cod-gray:      #151515 !default;
 $oslo-gray:     #858a8d !default;
+$mine-shaft:    #282727 !default;
+$alto:          #dddddd !default;
+$curious-blue:  #1786eb !default;
 
 // Body
 
