--- a/src/sass/components/Tile.scss
+++ b/src/sass/components/Tile.scss
@@ -1,11 +1,50 @@
+$tile-min-height: 20vh;
+
 .tile {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     color: $white;
-    height: 20vh;
+    min-height: $tile-min-height;
     max-width: 320px;
     border-radius: 10px;
-    background-color: palevioletred;
+    background-color: $mine-shaft;
+
+    .miniature {
+        width: 100%;
+        height: 225px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .logo {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 80%;
+            height: 80%;        
+        }
+    }
+
+    .caption {
+        padding: 0.5rem 0.75rem;
+        display: flex;
+        text-align: center;
+        align-items: flex-start;
+        justify-content: center;
+        font-size: $font-size-base;
+    }
+
+    a {
+        text-decoration: none;
+        color: $alto;
+        width: 100%;
+
+        &:hover {
+            color: $curious-blue;
+        }
+    }
+
+    
 }
   
