--- a/src/sass/components/Timer.scss
+++ b/src/sass/components/Timer.scss
@@ -2,6 +2,7 @@ $timer-height: 98vh !default;
 
 .timer {
   height: $timer-height;
+  
   &:after {
     content: "";
     position: absolute;
@@ -24,9 +25,17 @@ $timer-height: 98vh !default;
 
     .logo {
       display: flex;
-      height: 70%;
+      height: 100%;
+      width: 100%;
       align-items: center;
       justify-content: center;
+
+      img {
+        max-width: 90%;
+        height: auto;
+        margin: 0 auto;
+        max-height: 90%;
+      }
     }
   
     .countdown {
