--- a/src/sass/components/Tile.scss
+++ b/src/sass/components/Tile.scss
@@ -9,6 +9,7 @@ $tile-min-height: 20vh;
     max-width: 320px;
     border-radius: 10px;
     background-color: $mine-shaft;
+    overflow: hidden;
 
     .miniature {
         width: 100%;
