--- a/src/sass/components/Timer.scss
+++ b/src/sass/components/Timer.scss
@@ -42,6 +42,33 @@ $timer-height: 98vh !default;
       z-index: 10;
     }
 
+    .message {
+      z-index: 10;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      h1 {
+        margin: 0;
+        padding: 0;
+        font-size: 8rem;
+        
+        @include breakpoint(md) {
+          font-size: 6.5rem;
+        }
+
+        @include breakpoint(sm) {
+          font-size: 4.0rem;
+        }
+
+        @include breakpoint(xs) {
+          font-size: 2.5rem;
+        }
+
+      }
+    }
+
   }
 
 }
