--- a/src/sass/components/Timer.scss
+++ b/src/sass/components/Timer.scss
@@ -46,20 +46,21 @@ $timer-height: 98vh !default;
       z-index: 10;
       display: flex;
       flex-direction: column;
+      text-align: center;
       align-items: center;
       justify-content: center;
 
       h1 {
         margin: 0;
         padding: 0;
-        font-size: 8rem;
+        font-size: 5rem;
         
         @include breakpoint(md) {
-          font-size: 6.5rem;
+          font-size: 4.0rem;
         }
 
         @include breakpoint(sm) {
-          font-size: 4.0rem;
+          font-size: 3.0rem;
         }
 
         @include breakpoint(xs) {
