--- a/src/sass/components/Timer.scss
+++ b/src/sass/components/Timer.scss
@@ -32,9 +32,9 @@ $timer-height: 98vh !default;
 
       img {
         max-width: 90%;
+        max-height: 90%;
         height: auto;
         margin: 0 auto;
-        max-height: 90%;
       }
     }
   
@@ -43,10 +43,11 @@ $timer-height: 98vh !default;
     }
 
     .message {
+      padding: 1rem 1rem 4rem 1rem;
       z-index: 10;
+      text-align: center;
       display: flex;
       flex-direction: column;
-      text-align: center;
       align-items: center;
       justify-content: center;
 
