Experimenting with vector graphics

--- a/src/sass/components/Timer.scss
+++ b/src/sass/components/Timer.scss
@@ -33,7 +33,7 @@ $timer-height: 98vh !default;
       img {
         max-width: 90%;
         max-height: 90%;
-        height: auto;
+        height: 75%;
         margin: 0 auto;
       }
     }
