--- a/src/sass/views/NotFound.scss
+++ b/src/sass/views/NotFound.scss
@@ -1,8 +1,49 @@
-div {
-    height: 100vh;
+.not-found {
+    height: 50vh;
+    width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: orange;
-    color: $cod-gray;
+    text-align: center;
+
+    h1 {
+      font-size: 10rem;
+      margin: 0;
+      padding: 0;
+
+      @include breakpoint(md) {
+        font-size: 8rem;
+      }
+
+      @include breakpoint(sm) {
+        font-size: 7rem;
+      }
+      
+      @include breakpoint(xs) {
+        font-size: 6rem
+      }
+    }
+
+    h3 {
+      font-size: 3rem;
+      margin: 1rem 0 0;
+      padding: 0;
+
+      @include breakpoint(md) {
+        font-size: 2.5rem;
+      }
+
+      @include breakpoint(sm) {
+        font-size: 2rem;
+      }
+      
+      @include breakpoint(xs) {
+        font-size: 1.5rem
+      }
+    }
+}
+
+.timersGrid {
+  margin: 4rem 0;
 }
