--- a/public/glyphicons/style.css
+++ b/public/glyphicons/style.css
@@ -1,17 +1,18 @@
 @font-face {
-  font-family: 'star-wars-countdown';
-  src:  url('fonts/star-wars-countdown.eot?4xawr2');
-  src:  url('fonts/star-wars-countdown.eot?4xawr2#iefix') format('embedded-opentype'),
-    url('fonts/star-wars-countdown.ttf?4xawr2') format('truetype'),
-    url('fonts/star-wars-countdown.woff?4xawr2') format('woff'),
-    url('fonts/star-wars-countdown.svg?4xawr2#star-wars-countdown') format('svg');
+  font-family: "star-wars-countdown";
+  src: url("fonts/star-wars-countdown.eot");
+  src: url("fonts/star-wars-countdown.eot?#iefix") format("embedded-opentype"),
+    url("fonts/star-wars-countdown.ttf") format("truetype"),
+    url("fonts/star-wars-countdown.woff") format("woff"),
+    url("fonts/star-wars-countdown.svg") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
-[class^="swc-"], [class*=" swc-"] {
+[class^="swc-"],
+[class*=" swc-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'star-wars-countdown' !important;
+  font-family: "star-wars-countdown" !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
