--- a/src/sass/components/Tile.scss
+++ b/src/sass/components/Tile.scss
@@ -23,8 +23,8 @@ $tile-min-height: 20vh;
             display: none;
             margin-left: auto;
             margin-right: auto;
-            width: 80%;
-            height: 80%;     
+            max-width: 80%;
+            max-height: 80%;     
             
             &[src] {
                 display: block;
